Added new categories and made submit button disappear
Made submit button disappear once selections are submitted and reappear once quiz is reloaded. Added new quiz category selections to landing page and add question page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,6 +60,9 @@ button:hover {
   background-color: none;
   display: grid;
 }
+.disabled {
+  display: none;
+}
 /* result page styling */
 .finalScore {
   background-color: none;
